swagger doc for get access token endpoint and cors
