# showcase_app/docs/swagger.json
@@ -12,6 +12,58 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/api/v1/get-access-token": {
+            "get": {
+                "description": "returns a new access token using refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Authentication"
+                ],
+                "summary": "Get New Access Token",
+                "parameters": [
+                    {
+                        "description": "Get access token",
+                        "name": "refreshtoken",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RefreshToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.AccessToken"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/project/:projectID": {
             "get": {
                 "description": "Get project info by projectID",
@@ -20,6 +72,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Project"
                 ],
                 "summary": "Get project details",
                 "parameters": [
@@ -70,6 +125,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Project"
+                ],
                 "summary": "Submit project",
                 "parameters": [
                     {
@@ -118,6 +176,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Project"
                 ],
                 "summary": "Validate project",
                 "parameters": [
@@ -168,6 +229,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Project"
+                ],
                 "summary": "Display list of unverified projects",
                 "responses": {
                     "200": {
@@ -205,6 +269,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "User Profile"
                 ],
                 "summary": "Query user info",
                 "parameters": [
@@ -252,6 +319,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "User Authentication"
                 ],
                 "summary": "Login user",
                 "parameters": [
@@ -302,6 +372,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Notification"
+                ],
                 "summary": "Display all notifications",
                 "parameters": [
                     {
@@ -348,6 +421,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "User Authentication"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
@@ -398,6 +474,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User Profile"
+                ],
                 "summary": "Update user profile",
                 "parameters": [
                     {
@@ -447,6 +526,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Admin"
+                ],
                 "summary": "Update user role",
                 "parameters": [
                     {
@@ -489,6 +571,14 @@
         }
     },
     "definitions": {
+        "model.AccessToken": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                }
+            }
+        },
         "model.HTTPError": {
             "type": "object",
             "properties": {
@@ -565,6 +655,14 @@
                 },
                 "verified": {
                     "type": "boolean"
+                }
+            }
+        },
+        "model.RefreshToken": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
                 }
             }
         },
